--- a/src/assets/scss/_history.scss
+++ b/src/assets/scss/_history.scss
@@ -1,7 +1,7 @@
 .history {
   border-radius: 24px;
   margin-top: 1rem;
-  padding: 1rem;
+  padding: 1.5rem;
   width: calc(100% + 1rem);
   margin-left: -0.5rem;
   @include md {
@@ -13,9 +13,10 @@
     justify-content: space-between;
     border-radius: 16px;
     padding: 1rem;
-    margin: 1rem;
+    margin: 1rem 0;
     @include md {
         align-items: center;
+        margin: 1rem 0;
     }
 
     .history-item-content {
