--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -1,6 +1,6 @@
 .search {
   display: flex;
-
+  position: relative;
   input,
   .search-btn {
     border-radius: 20px;
@@ -18,6 +18,7 @@
     height: 60px;
     padding: 0 1rem;
     width: 100%;
+    outline: none;
     @include md {
       height: 40px;
     }
@@ -32,4 +33,40 @@
       height: 40px;
     }
   }
+}
+
+input:focus ~ .floating-label,
+input:not(:focus):valid ~ .floating-label{
+  top: 8px;
+  bottom: 10px;
+  left: 14px;
+  font-size: 11px;
+  opacity: 1;
+
+  @include md {
+    top: 2px;
+    font-size: 8px;
+  }
+}
+
+.inputText {
+  font-size: 14px;
+  width: 200px;
+  height: 35px;
+  left: 14px;
+}
+
+.floating-label {
+  position: absolute;
+  pointer-events: none;
+  left: 14px;
+  top: 18px;
+  transition: 0.2s ease all;
+  @include md {
+    top: 8px;
+  }
+}
+
+.search>div {
+    width: 100%;
 }
